modify urls to be relative paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moonshot FAQ - Space Hackathon</title>
-    <link rel="icon" type="image/png" href="/img/sticker-cat2.png">
+    <link rel="icon" type="image/png" href="img/sticker-cat2.png">
     <style>
         * {
             margin: 0;
@@ -562,9 +562,9 @@
 
             // configuration for global stickers
             const images = [
-                { src: '/img/sticker-astronaut.png', size: 90 },
-                { src: '/img/sticker-rocket.png', size: 110 },
-                { src: '/img/sticker-cat.png', size: 95 }
+                { src: 'img/sticker-astronaut.png', size: 90 },
+                { src: 'img/sticker-rocket.png', size: 110 },
+                { src: 'img/sticker-cat.png', size: 95 }
             ];
             const count = 9; // number of stickers around the page
 
