Update FAQ section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moonshot FAQ - Space Hackathon</title>
-    <link rel="icon" type="image/png" href="img/sticker-cat2.png">
+    <link rel="icon" type="image/png" href="/img/sticker-cat2.png">
     <style>
         * {
             margin: 0;
@@ -365,7 +365,7 @@
                     There is no specific theme required, just remember to follow the approval requirements. You can work with:<br><br>
                     • <strong>Software</strong> → Track time with <a href="https://hackatime.hackclub.com/" target="_blank">Hackatime</a> (if you have problems setting it up, ask for help in the Slack channel <a href="https://hackclub.slack.com/archives/C08MDGUPJ6A" target="_blank">#hackatime-v2</a>)<br>
                     • <strong>Hardware</strong> → Track time with <a href="#journaling-system">journaling system</a><br>
-                    • <strong>Video editing and art</strong> (MAX. 15 hours) → Track time with <a href="#journaling-system">journaling system</a>
+                    • <strong>Video editing and art</strong> (MAX. 10% of overall time) → Track time with <a href="#journaling-system">journaling system</a>
                 </div>
             </div>
         </div>
@@ -418,6 +418,18 @@
 
         <!-- FAQ Section -->
         <div class="section-heading faq">❓ FAQ SECTION ❓</div>
+
+        <div class="faq-item">
+            <div class="faq-question">
+                <span>Is airfare covered as part of the 75 hours I need to work to attend?</span>
+                <span class="faq-icon">+</span>
+            </div>
+            <div class="faq-answer">
+                <div class="faq-answer-content">
+                    No. Travel stipends will be available within the Moonshop at a minimum rate of $10/hr. Your airfare must be covered by yourself personally, or alternatively thru earning stipends.
+                </div>
+            </div>
+        </div>
 
         <div class="faq-item">
             <div class="faq-question">
@@ -474,7 +486,7 @@
             </div>
             <div class="faq-answer">
                 <div class="faq-answer-content">
-                    Signup here!
+                    <a href="https://moonshot.hackclub.com/" target="_blank" rel="noopener noreferrer">Signup here</a>!
                 </div>
             </div>
         </div>
@@ -536,7 +548,7 @@
             </div>
             <div class="faq-answer">
                 <div class="faq-answer-content">
-                    As long it's not part of other HC programs, yes you can! We HIGHLY suggest to create a new Github repository, it's not mandatory, but it will increase your chances of being approved, and will make the process much faster.
+                    It's fine if you work on a project that has been associated w/ another program or already started - you can continue it - but we will only take hours from the beginning of the moonshot announcement. We HIGHLY suggest to create a new Github repository, it's not mandatory, but it will increase your chances of being approved, and will make the process much faster.
                 </div>
             </div>
         </div>
@@ -562,9 +574,9 @@
 
             // configuration for global stickers
             const images = [
-                { src: 'img/sticker-astronaut.png', size: 90 },
-                { src: 'img/sticker-rocket.png', size: 110 },
-                { src: 'img/sticker-cat.png', size: 95 }
+                { src: '/img/sticker-astronaut.png', size: 90 },
+                { src: '/img/sticker-rocket.png', size: 110 },
+                { src: '/img/sticker-cat.png', size: 95 }
             ];
             const count = 9; // number of stickers around the page
 
